[metadata]
name = aodhclient
summary = Python client library for Aodh
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-aodhclient/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    aodhclient

[extras]
test =
    coverage>=3.6
    oslotest>=1.10.0 # Apache-2.0
    reno>=1.6.2 # Apache2
    tempest>=10
    stestr>=2.0.0 # Apache-2.0
    testtools>=1.4.0
    pifpaf[gnocchi]>=0.23
    gnocchi[postgresql,file]

[entry_points]
console_scripts =
    aodh = aodhclient.shell:main

keystoneauth1.plugin =
    aodh-noauth = aodhclient.noauth:AodhNoAuthLoader

openstack.cli.extension =
    metric = aodhclient.osc

openstack.alarming.v2 =
    alarm create = aodhclient.v2.alarm_cli:CliAlarmCreate
    alarm list = aodhclient.v2.alarm_cli:CliAlarmList
    alarm show = aodhclient.v2.alarm_cli:CliAlarmShow
    alarm delete = aodhclient.v2.alarm_cli:CliAlarmDelete
    alarm update = aodhclient.v2.alarm_cli:CliAlarmUpdate
    alarm state get = aodhclient.v2.alarm_cli:CliAlarmStateGet
    alarm state set = aodhclient.v2.alarm_cli:CliAlarmStateSet
    alarm-history search = aodhclient.v2.alarm_history_cli:CliAlarmHistorySearch
    alarm-history show = aodhclient.v2.alarm_history_cli:CliAlarmHistoryShow
    alarming capabilities list = aodhclient.v2.capabilities_cli:CliCapabilitiesList
    alarm quota show = aodhclient.v2.quota_cli:QuotaShow
    alarm quota set = aodhclient.v2.quota_cli:QuotaSet

[compile_catalog]
directory = aodhclient/locale
domain = aodhclient

[update_catalog]
domain = aodhclient
output_dir = aodhclient/locale
input_file = aodhclient/locale/aodhclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = aodhclient/locale/aodhclient.pot
