[metadata]
name = aodhclient
summary = Python client library for Aodh
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-aodhclient/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    aodhclient

[options.extras_require]
test =
    coverage>=3.6
    oslotest>=1.10.0 # Apache-2.0
    reno>=1.6.2 # Apache2
    tempest>=10
    stestr>=2.0.0 # Apache-2.0
    testtools>=1.4.0
    pifpaf[gnocchi]>=0.23
    gnocchi[postgresql,file]
    # FIXME: Remove these caps when aodh supports SQLAlchemy 2.0
    SQLAlchemy-Utils<=0.38.3
    sqlalchemy-migrate<=0.13.0
    SQLAlchemy<=1.4.41
    oslo.db<=12.3.1
    ;Disabled due to https://github.com/pypa/twine/issues/726
    ;aodh @ https://tarballs.openstack.org/aodh/aodh-master.tar.gz#egg=aodh[mysql]

[entry_points]
console_scripts =
    aodh = aodhclient.shell:main

keystoneauth1.plugin =
    aodh-noauth = aodhclient.noauth:AodhNoAuthLoader

openstack.cli.extension =
    metric = aodhclient.osc

openstack.alarming.v2 =
    alarm create = aodhclient.v2.alarm_cli:CliAlarmCreate
    alarm list = aodhclient.v2.alarm_cli:CliAlarmList
    alarm show = aodhclient.v2.alarm_cli:CliAlarmShow
    alarm delete = aodhclient.v2.alarm_cli:CliAlarmDelete
    alarm update = aodhclient.v2.alarm_cli:CliAlarmUpdate
    alarm state get = aodhclient.v2.alarm_cli:CliAlarmStateGet
    alarm state set = aodhclient.v2.alarm_cli:CliAlarmStateSet
    alarm-history search = aodhclient.v2.alarm_history_cli:CliAlarmHistorySearch
    alarm-history show = aodhclient.v2.alarm_history_cli:CliAlarmHistoryShow
    alarming capabilities list = aodhclient.v2.capabilities_cli:CliCapabilitiesList
    alarm quota show = aodhclient.v2.quota_cli:QuotaShow
    alarm quota set = aodhclient.v2.quota_cli:QuotaSet

